# fuzzy-search

./: .gitignore  .readthedocs.yaml  CITATION.cff  Demonstrate-fuzzy-search.ipynb  LICENSE  README.md  poetry_scripts.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-package.yml
data/: auction_advertisements.py  demo_data.py
docs/: conf.py  index.rst  requirements.txt
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/doctrees/source/: fuzzy_search.doctree  fuzzy_search.match.doctree  fuzzy_search.pattern.doctree  fuzzy_search.phrase.doctree  fuzzy_search.search.doctree  fuzzy_search.tokenization.doctree  modules.doctree  poetry_scripts.doctree  resolution_phrase_model.doctree  setup.doctree  test.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/source/: fuzzy_search.analysis.rst  fuzzy_search.compare.rst  fuzzy_search.match.rst  fuzzy_search.pattern.rst  fuzzy_search.phrase.rst  fuzzy_search.rst  fuzzy_search.search.rst  fuzzy_search.stats.rst  fuzzy_search.tokenization.rst  modules.rst  poetry_scripts.rst  quickstart.rst  resolution_phrase_model.rst  test.rst
fuzzy_search/: __init__.py  _version.py  fuzzy_config.py  fuzzy_context_searcher.py  fuzzy_keyword.py  fuzzy_keyword_searcher.py  fuzzy_match.py  fuzzy_patterns.py  fuzzy_person_name_searcher.py  fuzzy_phrase.py  fuzzy_phrase_model.py  fuzzy_phrase_searcher.py  fuzzy_searcher.py  fuzzy_string.py  fuzzy_template.py  fuzzy_template_searcher.py  similarity.py
fuzzy_search/analysis/: __init__.py  similarity.py
fuzzy_search/compare/: __init__.py
fuzzy_search/match/: __init__.py  candidate_match.py  exact_match.py  match_offsets.py  phrase_match.py  skip_match.py
fuzzy_search/pattern/: __init__.py  fuzzy_patterns.py  fuzzy_template.py
fuzzy_search/phrase/: __init__.py  phrase.py  phrase_model.py
fuzzy_search/search/: __init__.py  config.py  context_searcher.py  phrase_searcher.py  searcher.py  template_searcher.py  token_searcher.py
fuzzy_search/stats/: __init__.py  compare.py  freq.py
fuzzy_search/tokenization/: string.py  subtoken.py  token.py  vocabulary.py
html_docs/: index.html  py-modindex.html
html_docs/source/: setup.html  test.html
notebooks/: historic_dutch_resolutions.ipynb  modern_english_text.ipynb
test/: test_analysis_similarity.py  test_analysis_subtoken.py  test_fuzzy_context_searcher.py  test_fuzzy_match.py  test_fuzzy_phrase.py  test_fuzzy_phrase_model.py  test_fuzzy_phrase_searcher.py  test_fuzzy_string.py  test_fuzzy_template.py  test_fuzzy_template_searcher.py  test_match_candidate.py  test_match_phrase.py  test_match_skip.py  test_pattern_template.py  test_phrase_phrase.py  test_phrase_phrase_model.py  test_search_context_searcher.py  test_search_phrase_searcher.py  test_search_searcher.py  test_search_template_searcher.py  test_search_token_searcher.py  test_similarity.py  test_tokenization_string.py  test_tokenization_subtoken.py  test_tokenization_token.py  test_tokenization_vocabulary.py
(+19 files in other folders)
